# mattermost-mcp-python

./: .env.example  .flake8  .pre-commit-config.yaml  AUTHENTICATION_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  MANIFEST.in  README.md  STREAMING_IMPLEMENTATION_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  WARP_DRIVE_INTEGRATION_UPDATE.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py  validate_models.py  warp-drive-integration.md  warp-drive-sample-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker/: nginx.conf
docs/: CLI_USAGE.md  ERROR_HANDLING_AND_METRICS.md  README.md  architecture.md  configuration.md  http_client.md  quickstart.md  streaming_resources.md
docs/examples/: README.md  basic-usage.md
docs/tools/: README.md
examples/: cli_usage_example.py  http_client_example.py  metrics_and_error_handling_example.py  model_usage_example.py  streaming_example.py
mcp_mattermost/: __init__.py  __main__.py  auth.py  mattermost-mcp-analysis.md  mattermost-openapi-v4.yaml  metrics.py  server.py  stdio_server.py
mcp_mattermost/api/: __init__.py  client.py  exceptions.py
mcp_mattermost/events/: __init__.py  websocket.py
mcp_mattermost/models/: README.md  __init__.py  auth.py  base.py  channels.py  posts.py  teams.py  users.py  webhooks.py
mcp_mattermost/resources/: __init__.py  base.py  channel_posts.py  reactions.py
mcp_mattermost/services/: __init__.py  base.py  channels.py  files.py  posts.py  teams.py  users.py
mcp_mattermost/tools/: __init__.py  auth.py  base.py  channels.py  messaging.py
mcp_mattermost/utils/: __init__.py
tests/: README.md  __init__.py  test_api_exceptions.py  test_http_client.py  test_integration.py  test_mcp_integration.py  test_server.py  test_services.py  test_streaming_resources.py
tests/fixtures/: test_config.json
